aura-modules/src/test/modules/invalidmodule/examples-duplicate-entries/__examples__/example3/example3.js
import { Element } from 'engine';

export default class Example3 extends Element {
}